基本流程全部跑通